test(end-to-end)

--- a/TaskManager/TaskManager/Pages/Shared/_publicLayout.cshtml
+++ b/TaskManager/TaskManager/Pages/Shared/_publicLayout.cshtml
@@ -16,9 +16,9 @@
         </nav>
         @RenderBody()
     </div>
-    <div class="footer">
-        <a href="/APIguide">For developers: a guide to our API services</a>
-        <p>This app uses the ASP.NET Core framework, and is hosted on Azure.</p>
+    <div class="footer" data-test="footer">
+        <a href="/APIguide" data-test="APIguide">For developers: a guide to our API services</a>
+        <p data-test="credits">This app uses the ASP.NET Core framework, and is hosted on Azure.</p>
     </div>
 </body>
 </html>
