--- a/TaskManager/TaskManager/Pages/main.cshtml
+++ b/TaskManager/TaskManager/Pages/main.cshtml
@@ -4,9 +4,9 @@
 }
 
     <div class="displayCardsContainer middleWidthContainer firstContainer">
-        <p id="brandName">TaskManager</p>
+        <p id="brandName" data-test="brandName">TaskManager</p>
         <p>is a free, lightweight platform for teams to keep track of their projects.</p>
         <p>Accounts are free, and you can choose to sign in using Google.</p>
         <p>If you want to get familiar with our platform first, take a tour signing in as "Guest" (password: "guest")!</p>
-        <a class="largeButton" id="mainPageButton" href="/signUp">Sign up now!</a>
+        <a class="largeButton" id="mainPageButton" data-test="signUpButton" href="/signUp">Sign up now!</a>
     </div>
