test(end-to-end): more tests

--- a/TaskManager/TaskManager/wwwroot/css/styles.css
+++ b/TaskManager/TaskManager/wwwroot/css/styles.css
@@ -239,7 +239,7 @@ nav {
     }
     .displayCard .details a {
         color: #707070;
-        text-decoration: none;
+        text-decoration: underline;
     }
 
 /* ------------- card - in - project specific ------------- */
