--- a/TaskManager/TaskManager/Views/Main/UserMainPage.cshtml
+++ b/TaskManager/TaskManager/Views/Main/UserMainPage.cshtml
@@ -29,7 +29,7 @@
                 </div>
              }
             <div class="details">
-                <a href="users/projects/@project.Id" data-test="detailsLink">Details...</a>
+                <a href="users/projects/@project.Id" data-test="detailsLink">Details</a>
             </div>
         </div>
     }
