--- a/TaskManager/TaskManager/Views/Shared/_userLayout.cshtml
+++ b/TaskManager/TaskManager/Views/Shared/_userLayout.cshtml
@@ -11,8 +11,8 @@
             </div>
             <div>
                 @{var role = ViewData["role"] == null ?
-                              (User.IsInRole("TodoAdmin") ? "Admin" : "User") :
-                              ViewData["role"];
+                                (User.IsInRole("TodoAdmin") ? "Admin" : "User") :
+                                ViewData["role"];
                     <p>@User.Identity.Name as @role</p>
                 }
                 <a href="/users/changeRole">Change role</a>
@@ -21,9 +21,6 @@
         </nav>
         @RenderBody()
     </div>
-    <div class="footer" data-test="footer">
-        <a href="/APIguide" data-test="APIguide">For developers: a guide to our API services</a>
-        <p data-test="credits">This app uses the ASP.NET Core framework, and is hosted on Azure.</p>
-    </div>
+    @await Html.PartialAsync("_LayoutFooterPartial.cshtml")
 </body>
 </html>
