refactor(integration tests): final corrections

--- a/TaskManager/TaskManager/Views/Token/Token.cshtml
+++ b/TaskManager/TaskManager/Views/Token/Token.cshtml
@@ -4,7 +4,7 @@
     <div class="displayCardsContainer narrowContainer firstContainer">
         <div class="displayCard">
             <div class="title">Your token is here, @User.Identity.Name:</div>
-            <p id="token"> @ViewData["token"]</p>
+            <p id="token" data-test="token"> @ViewData["token"]</p>
             <div class="description">Be aware that this will expire in a day.</div>
         </div>
     </div>
