refactor(user interface): minor fixes

--- a/TaskManager/TaskManager/Views/Card/_ScriptForDatePickingPartial.cshtml
+++ b/TaskManager/TaskManager/Views/Card/_ScriptForDatePickingPartial.cshtml
@@ -6,4 +6,10 @@
         enableTime: true,
         dateFormat: "Y-m-d H:i",
     });
+
+    $('.flatpickr-input:visible').on('focus', function () {
+        $(this).blur()
+    })
+
+    $('.flatpickr-input:visible').prop('readonly', false)
 </script>
