--- a/TaskManager/TaskManager/Views/Project/ProjectWithCards.cshtml
+++ b/TaskManager/TaskManager/Views/Project/ProjectWithCards.cshtml
@@ -8,6 +8,11 @@
 <div class="displayCardsContainer primaryContainer firstContainer">
     @{var project = (Project)ViewData["project"];
         <ul class="displayCard primaryCard">
+            <li class="backArrow">
+                <a href="/users">
+                    <img src="~/back.png" alt="back to the projects page" />
+                </a>
+            </li>
             <li class="mainTitle" data-test="projectTitle">@project.Title</li>
             <li class="description" data-test="projectDescription">@project.Description</li>
             <li class="responsibles">
@@ -21,13 +26,13 @@
                     <p>To do</p>
                     <ul class="displayCard linkCard">
                         <li class="title">
-                            <a id="createNewLink" href="@project.Id/cards/addCard">Create new card...</a>
+                            <a id="createNewLink" href="@project.Id/cards/addCard">Add new card</a>
                         </li>
                     </ul>
                     @{
                         ViewData["cards"] = project.Cards.Where(c => !c.Done).ToList();
                         ViewData["cardType"] = "toDoCard";
-                        ViewData["toggleName"] = "mark as done";
+                        ViewData["toggleName"] = "Mark as done";
                     }
                     @await Html.PartialAsync("_CardsPartial.cshtml")
                 </div>
@@ -36,7 +41,7 @@
                     @{
                         ViewData["cards"] = project.Cards.Where(c => c.Done).ToList();
                         ViewData["cardType"] = "doneCard";
-                        ViewData["toggleName"] = "mark as not done";
+                        ViewData["toggleName"] = "Mark as not done";
                     }
                     @await Html.PartialAsync("_CardsPartial.cshtml")
                 </div>
