--- a/TaskManager/TaskManager/Views/Project/AddProject.cshtml
+++ b/TaskManager/TaskManager/Views/Project/AddProject.cshtml
@@ -5,8 +5,8 @@
 }
 
 <div class="displayCardsContainer middleWidthContainer firstContainer">
-    <div class="displayCard">
-        <div class="title">Add new project</div>
+    <article class="displayCard">
+        <h2 class="title">Add new project</h2>
         <form action="/users/addProject" method="POST">
             <div id="inputContainer">
                 <input type="text" name="Title" placeholder="Title" required />
@@ -26,5 +26,5 @@
                 <button class="largeButton" type="submit">Submit</button>
             </div>
         </form>
-    </div>
+    </article>
 </div>
