--- a/TaskManager/TaskManager/Pages/Users/changeRole.cshtml
+++ b/TaskManager/TaskManager/Pages/Users/changeRole.cshtml
@@ -4,25 +4,27 @@
 }
 
 <div class="displayCardsContainer narrowContainer firstContainer">
-    <div class="displayCard">
+    <article class="displayCard">
         @{ if (User.IsInRole("TodoAdmin"))
            {
-               <div class="title">Renounce the admin role</div>
-               <div class="largeButton" id="centerContent">
-                   <a class="largeButton" href="/users/stopBeingAdmin">renounce</a>
+               <h2 class="title">Renounce the admin role</h2>
+               <div id="centerContent">
+                   <a class="renounceAdminButton"  href="/users/stopBeingAdmin">
+                       <p class="largeButton">Renounce</p>
+                   </a>
                </div>
            }
            else
            {
-               <div class="title">Admin Application</div>
+               <h2 class="title">Admin Application</h2>
                <form action="/users/becomeAdmin" method="POST">
                    <div id="inputContainer">
-                       <div class="description">Why do you want to become an admin of our site?</div>
-                       <textarea class="description" name="motivation"></textarea>
+                       <label for="motivation" class="description">Why do you want to become an admin of our site?</label>
+                       <textarea id="motivation" class="description" name="motivation"></textarea>
                        <button class="largeButton" type="submit">Submit</button>
                    </div>
                </form>
            }
          }
-    </div>
+    </article>
 </div>
