--- a/TaskManager/TaskManager/Pages/login.cshtml
+++ b/TaskManager/TaskManager/Pages/login.cshtml
@@ -3,19 +3,19 @@
     Layout = "_publicLayout";
 }
 <div class="displayCardsContainer narrowContainer firstContainer">
-    <div class="displayCard">
-        <div class="title">Log in</div>
+    <article class="displayCard">
+        <h2 class="title">Log in</h2>
         <form action="/login" method="POST">
             <div id="inputContainer">
                 <input type="text" name="Name" placeholder="Name" data-cy="name" required />
                 <input type="password" name="Password" placeholder="Password" required />
                 <button class="largeButton" type="submit">with TaskManager</button>
-                <div class="title" id="or">or</div>
+                <p class="title" id="or">or</p>
                 <a class="largeButton" id="googleLink" href="google/link/to/be/researched">
                     <img src="~/googlelogo.png" alt="Google logo" height="30" width="30" />
                     <p>with Google</p>
                 </a>
             </div>
         </form>
-    </div>
+    </article>
 </div>
