--- a/TaskManager/TaskManager/Pages/main.cshtml
+++ b/TaskManager/TaskManager/Pages/main.cshtml
@@ -4,7 +4,7 @@
 }
 
     <div class="displayCardsContainer middleWidthContainer firstContainer">
-        <p id="brandName" data-test="brandName">TaskManager</p>
+        <h2 id="brandName" data-test="brandName">TaskManager</h2>
         <p>is a free, lightweight platform for teams to keep track of their projects.</p>
         <p>Accounts are free, and you can choose to sign in using Google.</p>
         <p>If you want to get familiar with our platform first, take a tour signing in as "Guest" (password: "guest")!</p>
