--- a/TaskManager/TaskManager/Views/Card/AddCard.cshtml
+++ b/TaskManager/TaskManager/Views/Card/AddCard.cshtml
@@ -7,8 +7,8 @@
 
 @{var project = (Project)ViewData["project"];
     <div class="displayCardsContainer middleWidthContainer firstContainer">
-        <div class="displayCard">
-            <div class="title">Add new card to the project "@project.Title"</div>
+        <article class="displayCard">
+            <h2 class="title">Add new card to the project "@project.Title"</h2>
             <form action="/users/projects/@project.Id/cards/addCard" method="POST">
                 <div id="inputContainer">
                     <input type="text" name="Title" placeholder="Title" required />
@@ -34,6 +34,6 @@
                     <button class="largeButton" type="submit">Submit</button>
                 </div>
             </form>
-        </div>
+        </article>
     </div>
  }
