--- a/TaskManager/TaskManager/Views/Project/_CardsPartial.cshtml
+++ b/TaskManager/TaskManager/Views/Project/_CardsPartial.cshtml
@@ -3,24 +3,24 @@
 
 @{ foreach (Card card in (List<Card>)ViewData["cards"])
    {
-       <ul class="displayCard" data-test="@ViewData["cardType"]">
-           <li class="stats">
+       <section class="displayCard" data-test="@ViewData["cardType"]">
+           <div class="stats">
                <p class="@((card.Deadline < DateTime.Now && @ViewData["cardType"].Equals("toDoCard")) ? "pastDeadline" : "deadline")">
                    deadline: @card.Deadline
                </p>
                <a class="toggleDone" href="@card.Project.Id/cards/@card.Id/toggleDone">@ViewData["toggleName"]</a>
-           </li>
-           <li class="title titleToBeCentered" data-test="title">@card.Title</li>
-           <li class="description" data-test="description">@card.Description</li>
+           </div>
+           <h4 class="title titleToBeCentered" data-test="title">@card.Title</h4>
+           <p class="description" data-test="description">@card.Description</p>
            @if (((Project)ViewData["project"]).AssigneeProjects.Count() > 1)
             {
-                <li class="responsibles">
+                <ul class="responsibles">
                 @foreach (AssigneeCard assigneeCard in card.AssigneeCards.OrderBy(ac => ac.Assignee.UserName).ToList())
                  {
-                       <span class="responsibleName" data-test="responsibleName">@assigneeCard.Assignee.UserName</span>
+                       <li class="responsibleName" data-test="responsibleName">@assigneeCard.Assignee.UserName</li>
                  }
-                </li>
+                </ul>
             }
-       </ul>
+       </section>
    }
 }
