--- a/TaskManager/TaskManager/wwwroot/css/styles.css
+++ b/TaskManager/TaskManager/wwwroot/css/styles.css
@@ -463,7 +463,7 @@ p.largeButton {
     flex: 1 0 auto;
 }
 
-.footer {
+footer {
     flex-shrink: 0;
     height: 80px;
     width: 100%;
@@ -473,14 +473,14 @@ p.largeButton {
     color: #707070;
 }
 
-    .footer a {
+    footer a {
         color: #707070;
         text-decoration: underline;
         font-size: 20px;
         font-weight: bold;
     }
 
-    .footer p{
+    footer p{
         margin: 4px auto 20px auto;
         font-size: 16px;
     }
