feat(google authentication): early version

--- a/TaskManager/TaskManager/Pages/login.cshtml
+++ b/TaskManager/TaskManager/Pages/login.cshtml
@@ -11,7 +11,7 @@
                 <input type="password" name="Password" placeholder="Password" required />
                 <button class="largeButton" type="submit">with TaskManager</button>
                 <p class="title" id="or">or</p>
-                <a class="largeButton" id="googleLink" href="google/link/to/be/researched">
+                <a class="largeButton" id="googleLink" href="/google-login">
                     <img src="~/googlelogo.png" alt="Google logo" height="30" width="30" />
                     <p>with Google</p>
                 </a>
