feat(google authentication): second version

--- a/TaskManager/TaskManager/Pages/signUp.cshtml
+++ b/TaskManager/TaskManager/Pages/signUp.cshtml
@@ -15,7 +15,7 @@
             </div>
         </form>
         <p class="title" id="or">or</p>
-        <a class="largeButton" id="googleLink" href="google/link/to/be/researched">
+        <a class="largeButton" id="googleLink" href="/google-login">
             <img src="~/googlelogo.png" alt="Google logo" height="30" width="30" />
             <p>with Google</p>
         </a>
