refactor(namespaces): synchronize them with the directory structure

--- a/TaskManager/TaskManager/Views/Project/_CardsPartial.cshtml
+++ b/TaskManager/TaskManager/Views/Project/_CardsPartial.cshtml
@@ -1,5 +1,5 @@
-﻿@using TodoWithDatabase.Models.DAOs;
-@using TodoWithDatabase.Models.DAOs.JoinTables;
+﻿@using TaskManager.Models.DAOs;
+@using TaskManager.Models.DAOs.JoinTables;
 
 @{ foreach (Card card in (List<Card>)ViewData["cards"])
    {
