--- a/TaskManager/TaskManager/Pages/signUp.cshtml
+++ b/TaskManager/TaskManager/Pages/signUp.cshtml
@@ -8,7 +8,9 @@
         <form class="validatedForm" action="/signUp" method="POST">
             <div id="inputContainer">
                 <input type="text" name="Name" placeholder="Name" required />
-                <input id="password" type="password" name="password" placeholder="Password" required />
+                <input id="password" type="password" name="password" placeholder="Password" 
+                       title="Minimum 8 characters, one number, one uppercase and one lowercase letter" 
+                       required pattern="(?=^.{8,}$)((?=.*d)|(?=.*W+))(?![.n])(?=.*[A-Z])(?=.*[a-z]).*" />
                 <input id="verifyPassword" type="password" name="verifyPassword" placeholder="Verify Password" required /><span id='message'></span>
                 <button class="largeButton" type="submit">with TaskManager</button>
                 @await Html.PartialAsync("_VerifyPasswordScriptPartial.cshtml")
