--- a/TaskManager/TaskManager/Pages/signUp.cshtml
+++ b/TaskManager/TaskManager/Pages/signUp.cshtml
@@ -8,9 +8,10 @@
         <form class="validatedForm" action="/signUp" method="POST">
             <div id="inputContainer">
                 <input type="text" name="Name" placeholder="Name" required />
-                <input id="password" type="password" name="password" placeholder="Password" 
-                       title="Minimum 8 characters, one number, one uppercase and one lowercase letter" 
-                       required pattern="(?=^.{8,}$)((?=.*d)|(?=.*W+))(?![.n])(?=.*[A-Z])(?=.*[a-z]).*" />
+                <input id="password" type="password" name="password" placeholder="Password"
+                       title="Minimum 8 characters, one number, one uppercase and one lowercase letter"
+                       pattern="^(?=(.*[a-z]){1,})(?=(.*[\d]){1,})(?=(.*[\W]){1,})(?!.*\s).{8,}$" 
+                       required />
                 <input id="verifyPassword" type="password" name="verifyPassword" placeholder="Verify Password" required /><span id='message'></span>
                 <button class="largeButton" type="submit">with TaskManager</button>
                 @await Html.PartialAsync("_VerifyPasswordScriptPartial.cshtml")
@@ -21,5 +22,9 @@
             <img src="~/googlelogo.png" alt="Google logo" height="30" width="30" />
             <p>with Google</p>
         </a>
+        @if (TempData["errorMessage"] != null)
+        {
+            <p class="errorMessage">@TempData["errorMessage"]</p>
+        }
     </article>
 </div>
