--- a/TaskManager/TaskManager/Pages/login.cshtml
+++ b/TaskManager/TaskManager/Pages/login.cshtml
@@ -9,7 +9,7 @@
             <div id="inputContainer">
                 <input type="text" name="Name" placeholder="Name" data-cy="name" required />
                 <input type="password" name="Password" placeholder="Password" 
-                       title="Minimum 8 characters, one number, one uppercase and one lowercase letter"
+                       title="Passwords must be a single word, of at least 8 characters, containing one number, one uppercase and one lowercase letter"
                        pattern="^(?=(.*[a-z]){1,})(?=(.*[\d]){1,})(?=(.*[\W]){1,})(?!.*\s).{8,}$"
                        required />
                 <button class="largeButton" type="submit">with TaskManager</button>
