--- a/TaskManager/TaskManager/wwwroot/css/styles.css
+++ b/TaskManager/TaskManager/wwwroot/css/styles.css
@@ -1,4 +1,12 @@
-﻿html, body {
+﻿:root {
+    --brand-color: #00c9b5;
+    --pale-red: #f26f68;
+    --dark-grey: #707070;
+    --light-grey: #ebebeb;
+}
+
+
+html, body {
     height: 100%;
 }
 
@@ -8,7 +16,7 @@ body {
     font-weight: bold;
     display: flex;
     flex-direction: column;
-    background-color: #ebebeb;
+    background-color: var(--light-grey);
 }
 
 a {
@@ -31,7 +39,7 @@ ul {
 }
 
 .errorMessage {
-    color: #f26f68;
+    color: var(--pale-red);
 }
 
 /* ------------- first page specific ------------- */
@@ -39,8 +47,8 @@ ul {
 #brandName {
     font-family: 'Caveat', cursive;
     font-size: 120px;
-    color: #00c9b5;
-    margin: 20px  0;
+    color: var(--brand-color);
+    margin: 20px 0;
 }
 
 .middleWidthContainer p {
@@ -48,7 +56,7 @@ ul {
 }
 
 .largeButton {
-    background-color: #00c9b5;
+    background-color: var(--brand-color);
     border-radius: 15px;
     padding: 5px;
     width: 270px;
@@ -67,7 +75,7 @@ a.largeButton {
 /* ------------- horizontal nav bar ------------- */
 
 nav {
-    background-color: #00c9b5;
+    background-color: var(--brand-color);
     height: 95px;
     padding: 0 15px;
     display: flex;
@@ -131,7 +139,7 @@ nav {
 
     .secondaryContainer {
         width: calc(50% - 12px);
-        border: 3px solid #ebebeb;
+        border: 3px solid var(--light-grey);
         border-radius: 30px;
         margin: 0;
         padding-bottom: 5px;
@@ -140,7 +148,7 @@ nav {
         .secondaryContainer .columnTitle {
             margin: 5px 0;
             font-size: 24px;
-            color: #707070;
+            color: var(--dark-grey);
         }
 
     .firstContainer {
@@ -178,7 +186,7 @@ nav {
         }
 
     .linkCard {
-        background-color: #ebebeb;
+        background-color: var(--light-grey);
         padding: 4px;
         height: 40px;
     }
@@ -188,7 +196,7 @@ nav {
         }
 
             #createNewLink {
-                color: #707070;
+                color: var(--dark-grey);
                 font-weight: 800;
                 text-decoration: underline;
             }
@@ -213,11 +221,11 @@ nav {
         }
 
     .displayCard .notDone {
-        background-color: #f26f68;
+        background-color: var(--pale-red);
     }
 
     .displayCard .done {
-        background-color: #00c9b5;
+        background-color: var(--brand-color);
     }
 
     .displayCard .title, .displayCard .mainTitle {
@@ -257,7 +265,7 @@ nav {
         justify-content: center;
         align-items: center;
         height: 30px;
-        color: #00c9b5;
+        color: var(--brand-color);
     }
 
         .displayCard .responsibles ul {
@@ -271,7 +279,7 @@ nav {
                 padding: 5px 15px;
                 border: 2px solid;
                 border-radius: 30px;
-                border-color: #00c9b5;
+                border-color: var(--brand-color);
             }
 
             .displayCard .responsibles ul .responsibleName {
@@ -287,10 +295,10 @@ nav {
         margin: -20px 0 0 0;
     }
 
-    .displayCard .details a {
-        color: #707070;
-        text-decoration: underline;
-    }
+        .displayCard .details a {
+            color: var(--dark-grey);
+            text-decoration: underline;
+        }
 
 /* ------------- card - in - project specific ------------- */
 
@@ -303,9 +311,9 @@ nav {
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-end;
-    border-bottom: 3px solid #ebebeb;
+    border-bottom: 3px solid var(--light-grey);
     height: 15px;
-    color: #707070;
+    color: var(--dark-grey);
     margin: 0 -15px;
     padding: 0 15px;
 }
@@ -313,19 +321,19 @@ nav {
     .stats a {
         text-decoration: underline;
         font-weight: bold;
-        color: #707070;
+        color: var(--dark-grey);
         font-size: 20px;
     }
 
     .stats p {
         font-weight: normal;
-        color: #707070;
+        color: var(--dark-grey);
         font-size: 20px;
         margin: 0;
     }
 
         .stats p.pastDeadline {
-            color: #f26f68;
+            color: var(--pale-red);
         }
 
 /* ------------- for input ------------- */
@@ -355,11 +363,11 @@ nav {
         font-size: 20px;
     }
 
-    #responsiblesInput {
-        font-size: 18px;
-        margin-top: 15px;
-        color: #00c9b5;
-    }
+#responsiblesInput {
+    font-size: 18px;
+    margin-top: 15px;
+    color: var(--brand-color);
+}
 
 .pc-trigger {
     font-size: 18px;
@@ -400,7 +408,7 @@ p.largeButton {
 .renounceAdminButton {
     font-weight: 400;
     color: white;
-    margin-bottom: -20px;;
+    margin-bottom: -20px;
 }
 
 #googleLink {
@@ -409,9 +417,9 @@ p.largeButton {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    background-color: #ebebeb;
+    background-color: var(--light-grey);
     margin: 0 auto;
-    color: #707070;
+    color: var(--dark-grey);
     font-size: 25px;
     font-weight: 400;
     height: 30px;
@@ -458,7 +466,7 @@ p.largeButton {
 /* ------------- API token specific ------------- */
 
 #token {
-    color: #707070;
+    color: var(--dark-grey);
     overflow-wrap: break-word;
     font-weight: 400;
 }
@@ -476,11 +484,11 @@ footer {
     padding-top: 60px;
     text-align: center;
     font-weight: 400;
-    color: #707070;
+    color: var(--dark-grey);
 }
 
     footer a {
-        color: #707070;
+        color: var(--dark-grey);
         text-decoration: underline;
         font-size: 20px;
         font-weight: bold;
