--- a/TaskManager/TaskManager/Views/Main/UserMainPage.cshtml
+++ b/TaskManager/TaskManager/Views/Main/UserMainPage.cshtml
@@ -1,6 +1,6 @@
 ﻿@using TaskManager.Models.DAOs;
 @using TaskManager.Models.DAOs.JoinTables;
-
+@model TaskManager.Models.ViewModels.ProjectsViewModel;
 @{
     Layout = "_userLayout";
 }
@@ -8,19 +8,19 @@
     <article class="displayCard linkCard">
         <a id="createNewLink" href="users/addProject" data-test="addProject">Add new project</a>
     </article>
-    @foreach (Project project in (List<Project>)ViewData["projects"])
-    {
+    @foreach (var project in Model.projects)
+     {
         <article class="displayCard" data-test="project">
             <p class=@((project.Cards.Where(c => c.Done == false).Any()) ? "notDone" : "done")></p>
             <h2 class="titleToBeSlidUp" data-test="title">@project.Title</h2>
             <p class="description" data-test="description">@project.Description</p>
             @if (project.AssigneeProjects.Count() > 1)
-            {
+             {
                 <div class="responsibles" data-test="collaborators">
                     <label>Collaborating with:</label>
                     <ul>
                         @{var otherCollaborators = project.AssigneeProjects.AsQueryable()
-                                              .Where(a => !a.Assignee.UserName.Equals(User.Identity.Name)).ToList();
+                                                .Where(a => !a.Assignee.UserName.Equals(User.Identity.Name)).ToList();
 
                             var otherCollaboratorsInOrder = otherCollaborators.OrderBy(ap => ap.Assignee.UserName).ToList();
                             foreach (AssigneeProject assigneeProject in otherCollaboratorsInOrder)
@@ -30,10 +30,10 @@
                         }
                     </ul>
                 </div>
-            }
+             }
             <div class="details">
                 <a href="users/projects/@project.Id" data-test="detailsLink">Details</a>
             </div>
         </article>
-    }
+     }
 </div>
