--- a/TaskManager/TaskManager/Views/Main/UserMainPage.cshtml
+++ b/TaskManager/TaskManager/Views/Main/UserMainPage.cshtml
@@ -1,5 +1,4 @@
-﻿@using TaskManager.Models.DAOs;
-@using TaskManager.Models.DAOs.JoinTables;
+﻿@using TaskManager.Models.DAOs.JoinTables;
 @model TaskManager.Models.ViewModels.ProjectsViewModel;
 @{
     Layout = "_userLayout";
