--- a/TaskManager/TaskManager/Views/Project/ProjectWithCards.cshtml
+++ b/TaskManager/TaskManager/Views/Project/ProjectWithCards.cshtml
@@ -1,5 +1,4 @@
-﻿@using TaskManager.Models.DAOs;
-@using System.Linq;
+﻿@using System.Linq;
 @model TaskManager.Models.ViewModels.ProjectViewModel;
 @{
     Layout = "_userLayout";
