--- a/TaskManager/TaskManager/Views/Project/AddProject.cshtml
+++ b/TaskManager/TaskManager/Views/Project/AddProject.cshtml
@@ -1,5 +1,4 @@
-﻿@using TaskManager.Models.DAOs;
-@model TaskManager.Models.ViewModels.AssigneesViewModel;
+﻿@model TaskManager.Models.ViewModels.AssigneesViewModel;
 @{
     Layout = "_userLayout";
 }
@@ -8,6 +7,7 @@
     <article class="displayCard">
         <h2 class="title">Add new project</h2>
         <form action="/users/addProject" method="POST">
+            @Html.AntiForgeryToken()
             <div id="inputContainer">
                 <input type="text" name="Title" placeholder="Title" required />
                 <textarea class="description" name="Description" placeholder="Description" required></textarea>
